--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,21 +1,11 @@
 .App {
-<<<<<<< HEAD
   text-align: center; /* Center-aligns text within the app */
   font-family: 'Courier New', sans-serif; /* Sets the font family */
-  background-image: url('./images/background.png'); /* Path to background image */
+  background-image: url('background.png'); /* Path to background image */
   background-size: cover; /* Ensures the background image covers the entire element */
   background-position: center; /* Centers the background image */
   padding: 20px; /* Adds padding around the content */
   min-height: 100vh; /* Ensures the background covers the entire viewport */
-=======
-  text-align: center;
-  font-family: Arial, sans-serif;
-  background-image: url('./images/background.png'); /* Replace with your image path */
-  background-size: cover;
-  background-position: center;
-  padding: 20px;
-  min-height: 100vh; /* Ensures the background covers the whole viewport */
->>>>>>> cb5b95541b58515a1cc8599e485436777c09a8fe
 }
 
 .container {
