--- a/Downloads/grant-master/src/App.css
+++ b/Downloads/grant-master/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center; /* Center-aligns text within the app */
   font-family: 'Courier New', sans-serif; /* Sets the font family */
-  background-image: url('background1.png'); /* Path to background image */
+  background-image: url('https://github.com/dailypolygoncommunity/pro/blob/gh-pages/background.png'); /* Path to background image */
   background-size: cover; /* Ensures the background image covers the entire element */
   background-position: center; /* Centers the background image */
   padding: 20px; /* Adds padding around the content */
